# src/main/java/app/bpartners/geojobs/endpoint/rest/security/authorizer/CommunityZoneSurfaceAuthorizer.java
@@ -1,12 +1,12 @@
 package app.bpartners.geojobs.endpoint.rest.security.authorizer;
 
-import static app.bpartners.geojobs.repository.model.SurfaceUnit.SQUARE_DEGREE;
+import static app.bpartners.geojobs.repository.model.SurfaceUnit.SQUARE_METER;
 
 import app.bpartners.geojobs.endpoint.rest.model.Feature;
 import app.bpartners.geojobs.model.exception.ForbiddenException;
 import app.bpartners.geojobs.repository.model.community.CommunityAuthorization;
 import app.bpartners.geojobs.service.CommunityUsedSurfaceService;
-import app.bpartners.geojobs.service.FeatureSurfaceService;
+import app.bpartners.geojobs.service.DetectionAreaComputer;
 import java.util.List;
 import java.util.function.BiConsumer;
 import lombok.RequiredArgsConstructor;
@@ -17,17 +17,18 @@ import org.springframework.stereotype.Component;
 public class CommunityZoneSurfaceAuthorizer
     implements BiConsumer<CommunityAuthorization, List<Feature>> {
   private final CommunityUsedSurfaceService communityUsedSurfaceService;
-  private final FeatureSurfaceService featureSurfaceService;
+  private final DetectionAreaComputer detectionAreaComputer;
 
   @Override
   public void accept(
       CommunityAuthorization communityAuthorization, List<Feature> candidateFeatures) {
     var totalUsedSurface =
         communityUsedSurfaceService.getTotalUsedSurfaceByCommunityId(
-            communityAuthorization.getId(), SQUARE_DEGREE);
-    var newSurfaceValueToDetect = featureSurfaceService.getAreaValue(candidateFeatures);
+            communityAuthorization.getId(), SQUARE_METER);
+    var newSurfaceValueToDetect = detectionAreaComputer.apply(candidateFeatures);
     var candidateSurface =
         totalUsedSurface
+            .filter(communityUsedSurface -> communityUsedSurface.getUnit().equals(SQUARE_METER))
             .map(
                 communityUsedSurface ->
                     communityUsedSurface.getUsedSurface() + newSurfaceValueToDetect)
@@ -36,7 +37,7 @@ public class CommunityZoneSurfaceAuthorizer
 
     if (maxAuthorizedSurface < candidateSurface) {
       throw new ForbiddenException(
-          "Max Surface is exceeded for community.name = "
+          "Max surface is exceeded for community.name = "
               + communityAuthorization.getName()
               + " with max allowed surface: "
               + maxAuthorizedSurface);
