# src/main/java/app/bpartners/geojobs/repository/model/SurfaceUnit.java
@@ -1,5 +1,6 @@
 package app.bpartners.geojobs.repository.model;
 
 public enum SurfaceUnit {
-  SQUARE_DEGREE
+  SQUARE_DEGREE,
+  SQUARE_METER
 }
